@@ -15,46 +15,21 @@ import org.eclipse.wst.server.core.IServer;
 import org.fusesource.ide.foundation.core.util.Strings;
 import org.fusesource.ide.server.karaf.core.util.IKarafToolingConstants;
 
-public class Karaf3xStartupLaunchConfigurator extends Karaf2xStartupLaunchConfigurator {
+public class Karaf3xStartupLaunchConfigurator extends BaseKarafStartupLaunchConfigurator {
 	
 	public Karaf3xStartupLaunchConfigurator(IServer server) throws CoreException {
 		super(server);
 	}
 	
-	/* (non-Javadoc)
-	 * @see org.fusesource.ide.server.karaf.core.server.subsystems.BaseKarafStartupLaunchConfigurator#isSupportedRuntimeVersion(java.lang.String)
-	 */
 	@Override
 	protected boolean isSupportedRuntimeVersion(String version) {
 		return !Strings.isBlank(version) && version.startsWith(IKarafToolingConstants.KARAF_VERSION_3X);
 	}
 	
-	/* (non-Javadoc)
-	 * @see org.fusesource.ide.server.karaf.core.server.subsystems.BaseKarafStartupLaunchConfigurator#getVMArguments(java.lang.String, java.lang.String, java.lang.String)
-	 */
 	@Override
-	protected String getVMArguments(String karafInstallDir, String endorsedDirs, String extDirs) {
-		// 3.x removed use of derby, introduced etc folder
-		StringBuilder vmArguments = new StringBuilder();
-		
-		vmArguments.append("-Xms128M");
-		vmArguments.append(SPACE + "-Xmx512M");
-		vmArguments.append(SPACE + "-XX:+UnlockDiagnosticVMOptions");
-		vmArguments.append(SPACE + "-XX:+UnsyncloadClass");
-		vmArguments.append(SPACE + "-server ");
-		vmArguments.append(SPACE + "-Dcom.sun.management.jmxremote");
-		vmArguments.append(SPACE + "-Djava.endorsed.dirs=" + QUOTE + endorsedDirs + QUOTE);
-		vmArguments.append(SPACE + "-Djava.ext.dirs=" + QUOTE + extDirs + QUOTE);
-		vmArguments.append(SPACE + "-Dkaraf.startLocalConsole=false");
-		vmArguments.append(SPACE + "-Dkaraf.startRemoteShell=true");
-		vmArguments.append(SPACE + "-Dkaraf.home=" + QUOTE + karafInstallDir + QUOTE); 
-		vmArguments.append(SPACE + "-Dkaraf.base=" + QUOTE + karafInstallDir + QUOTE);
-		vmArguments.append(SPACE + "-Dkaraf.instances=" + QUOTE + karafInstallDir + SEPARATOR + "instances" + QUOTE);
-		vmArguments.append(SPACE + "-Dkaraf.data=" + QUOTE + karafInstallDir + SEPARATOR + "data" + QUOTE);
+	public String getVMArguments(String karafInstallDir, String endorsedDirs, String extDirs) {
+		StringBuilder vmArguments = new StringBuilder(super.getVMArguments(karafInstallDir, endorsedDirs, extDirs));
 		vmArguments.append(SPACE + "-Dkaraf.etc=" + QUOTE + karafInstallDir + SEPARATOR + "etc" + QUOTE);
-		vmArguments.append(SPACE + "-Djava.io.tmpdir=" + QUOTE + karafInstallDir + SEPARATOR + "data" + SEPARATOR + "tmp" + QUOTE);
-		vmArguments.append(SPACE + "-Djava.util.logging.config.file=" + QUOTE + karafInstallDir + SEPARATOR + "etc" + SEPARATOR + "java.util.logging.properties" + QUOTE);
-		
 		return vmArguments.toString();
 	}
 }
